--- a/vigenere.html
+++ b/vigenere.html
@@ -5,15 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <style>
+    body {
+      background-color: #fff8f6;
+    }
+    textarea:focus {
+  	  outline: 0;
+    }
+    .oldSchoolBorder {
+      outline: 0;
+      height: 50.9vh;
+      width: 50.8vw;
+      margin: 9.8vh 25vw 25vh 24.8vw;
+      outline: 2px solid #d7d7d7;
+      z-index: -2;
+      position: absolute;
+    }
     #text {
-      height: 70vh;
-      width: 70vw;
+      appearance: none;
+      height: 50vh;
+      width: 50vw;
+      margin: 10vh 25vw 25vh 25vw;
+      box-shadow: inset 0px 1px 0px 0px #8e8e8e;
+      background-color: #f7f2f0;
     }
   </style>
   <title>Document</title>
 </head>
 <body>
-  <input type="text" id="text" name="text" required minlength="20" maxlength="8000" size="70">
+  <div class="oldSchoolBorder"></div>
+  <textarea type="compact" id="text" required minlength="5" maxlength="8000"></textarea>
 </body>
 <script>
 
@@ -22,36 +42,41 @@
       abc = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z'],
       kw = [],
       kwL,
-      inp = document.querySelector('#text');
-      txt = text.value,
-      txtL = txt.length,
-      txtArr = [];
-      // txtArr = txt.split(''); prolly not necessary when strs have indices
+      inp = document.querySelector('#text'),
+      txt = inp.value;
+
+  txt = txt.replace(/[^\w\s]|_/g," ").replace(/\s+/g," ");
+  //get rid of punc
+  var txtArr = txt.split('');
+  txtArr = txtArr.filter(x => x !== " ");
+  //get rid of spaces
 
   function genKey() {
-    kwL = Math.floor(Math.random()*(2+20)-2);
+    kwL = Math.abs(Math.floor(Math.random()*(3+txtArr.length/3)-3));
     kw.length = kwL;
     for (let i = 0; i < kwL; i++) {
-      let ranlet = Math.floor(Math.random()*(2+26)-2);
+      let ranlet = Math.abs(Math.floor(Math.random()*(0+25)-0));
       kw[i] = abc[ranlet];
     }
-    console.log(kw);
     cipher();
   }
 
   function cipher() {
-    let it = txtL/kwL;
+    let itr = txtArr.length/kwL;
     let pos = 0;
-    while (pos < it) {
+    while (pos < itr) {
       for (let f = 0; f < kwL; f++) {
-        txt[f*pos] = kw[f];
+        let abi = abc.findIndex(x => x === txtArr[f]);
+        console.log(abi, abc[f]);
       }
       pos++;
     }
-    console.log(txt);
   }
 
   genKey();
+
+  console.log(txtArr.length, kw);
+
 
 
 </script>
