--- a/vigenere.html
+++ b/vigenere.html
@@ -93,6 +93,7 @@
       let ranlet = Math.abs(Math.round(Math.random()*(0-25)));
       kw[i] = abc[ranlet];
     }
+    console.log(kw);
     cipher();
   }
 
