--- a/vigenere.html
+++ b/vigenere.html
@@ -57,6 +57,6 @@
       <div class="dcipherB">de-nonsensify</div>
     </div>
   </div>
-  <script src="js/v3.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 </html>
